--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require('path')
 
 module.exports = {
-    // procurar pelo arquivo config.js em vez da
-    // config.json
-    config: path.resolve('config','config.js')
+  // Procura pelo arquivo config.js em vez do
+  // config.json
+  config: path.resolve('config', 'config.js')
 }
